  - Add Issue Board API support (andrebsguedes)
  - Allow the Koding integration to be configured through the API
  - Add new issue button to each list on Issues Board
  - Added soft wrap button to repository file/blob editor
  - Update namespace validation to forbid reserved names (.git and .atom) (Will Starms)
  - Show the time ago a merge request was deployed to an environment
  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)
  - Fix todos page mobile viewport layout (ClemMakesApps)
  - Fix inconsistent highlighting of already selected activity nav-links (ClemMakesApps)
  - Remove redundant mixins (ClemMakesApps)
  - Added 'Download' button to the Snippets page (Justin DiPierro)
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Close open merge request without source project (Katarzyna Kobierska Ula Budziszewska)
  - Fix that manual jobs would no longer block jobs in the next stage. !6604
  - Add configurable email subject suffix (Fu Xu)
  - Use defined colour for a language when available !6748 (nilsding)
  - Added tooltip to fork count on project show page. (Justin DiPierro)
  - Use a ConnectionPool for Rails.cache on Sidekiq servers
  - Replace `alias_method_chain` with `Module#prepend`
  - Enable GitLab Import/Export for non-admin users.
  - Preserve label filters when sorting !6136 (Joseph Frazier)
  - MergeRequest#new form load diff asynchronously
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Use custom Ruby images to test builds (registry.dev.gitlab.org/gitlab/gitlab-build-images:*)
  - Prevent flash alert text from being obscured when container is fluid
  - Append issue template to existing description !6149 (Joseph Frazier)
  - Trending projects now only show public projects and the list of projects is cached for a day
  - Memoize Gitlab Shell's secret token (!6599, Justin DiPierro)